Fix width on small screen

--- a/src/FooterAndLeftFilter.css
+++ b/src/FooterAndLeftFilter.css
@@ -220,7 +220,7 @@ p {
 @media only screen and (max-width: 450px) {
 
     .sectionLeft {
-        width: 100vw;
+        width: 100%;
         height: 10vh;
         text-align: center;
     }
@@ -244,7 +244,7 @@ p {
         grid-template-rows: auto;
         grid-gap: 4px;
         min-width: auto;
-        width: auto;
+        width: 100%;
     }
 
     .dropdown {
